1.0.1
Copy-FileToBcContainer and Copy-FileFromBcContainer didn't support that hostHelperFolder and containerHelperFolder was different
Get-TestsFromBcContainer and Run-TestsInBcContainer didn't support that hostHelperFolder and containerHelperFolder was different
Issue #1174 do not use hyperv isolation if Hyper-V isn't installed

1.0.0
Change module name to BcContainerHelper
Support Multitenancy in images
Add hostHelperFolder and containerHelperFolder to containerhelper config file for override